# node-qnn-llm

./: .gitignore  .release-it.json  CMakeLists.txt  README.md  htp_backend_ext_config.json  index.js  pack.py  package.json
.github/workflows/: _setup_qnn.yml  build.yml  release.yml
scripts/: update-version.js
src/: Context.cpp  Context.h  ContextHolder.cpp  ContextHolder.h  Embedding.cpp  Embedding.h  EmbeddingQueryWorker.cpp  EmbeddingQueryWorker.h  EmbeddingsHolder.cpp  EmbeddingsHolder.h  LoadWorker.cpp  LoadWorker.h  ProcessWorker.cpp  ProcessWorker.h  QueryWorker.cpp  QueryWorker.h  ReleaseWorker.cpp  ReleaseWorker.h  RestoreSessionWorker.cpp  RestoreSessionWorker.h  SaveSessionWorker.cpp  SaveSessionWorker.h  UnpackWorker.cpp  UnpackWorker.h  addons.cc  unpack.cpp  unpack.h  utils.c  utils.cpp  utils.h
